2014-04-04 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #57650: Fatal error: Call to a member function getSubmit() on a non-object

2014-04-03 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Correction to manual regarding removed generatePassword option

2014-03-30 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #57433: Wrong call of $this->email->compile

2014-03-24 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #57236: Fatal error in class.tx_srfeuserregister_lang.php on line 64 in TYPO3 4.5
	* Update version to 3.1.2

2014-03-21 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Follow up to #57091: Class 'Tx_SrFeuserRegister_Utility_UrlUtility' not found in TYPO3 4.5
	* Update version to 3.1.1

2014-03-20 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #57091: Class 'Tx_SrFeuserRegister_Utility_UrlUtility' not found in TYPO3 4.5

2014-03-19 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Follow-up to fix to support for labels containing dots in TypoScript

2014-03-18 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #56989: getUserObj vs makeInstance on tslib_cObj in 3.1.0
	* Resolves #50848: Improve usability when using tt_address
	* Fix missing argument on call to tx_srfeuserregister_email::compile() in tx_srfeuserregister_setfixed
	* Fix support for labels containing dots in TypoScript

2014-03-13 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Update manual
	* Clean initialisation
	* Update version to 3.1.0

2014-03-12 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Fix localization failure of error text in tx_srfeuserregister_setfixed
	* Resolves #51953: Subpart ###EMAIL_TEMPLATE_SETFIXED_ENTER_ADMIN### missing in HTML template

2014-03-11 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #56790: Remove dependency on extension div2007
	* Updated manual
	* Fix PHP warning in tx_srfeuserregister_select_dmcategories
	* Missing doNotEnforceUsername in static template
	* Fix incorrect behaviour when using email as username